tdf#165642 docx export glossary: RT endnotes.xml/footnotes.xml too

settings.xml might refer to endnotePr
(in which case there must be an endnotes.xml file)
and / or footnotePr
(in which case there must be a footnotes.xml file)
so round-trip these 2 files also if they exist in the glossary folder.

Otherwise MS Word complains about invalid content.

For this particular unit test it went bad in LO 7.4.4,
but in other circumstances, it already goes bad in LO 4.3.

make CppunitTest_sw_ooxmlexport22 \
    CPPUNIT_TEST_NAME=testTdf165642_glossaryFootnote

Change-Id: Ib4c2513fa915fc4de4aee056b67a5936be5c52a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182674
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 60788682d3d62264e8a5ac42f3469f2d2f55815c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182678
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>